# Vision

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  test.frag
assets/shaders/rasterization/: basic.frag  basic.vert
assets/shaders/raytracing/: raytracing.rgen  raytracing.rmiss
assets/shaders/raytracing/core/: ray_payload.glsl
include/core/camera/: Camera.h  PinholeCamera.h
include/core/math/: Matrix.h  Ray.h  Vector3.h
include/core/render/: RayIntersection.h  Raytracer.h
include/core/scene/: Scene.h
include/core/shape/: Shape.h  Sphere.h
include/example/: ImGuiExampleWindow.h  RaytracingExampleWindow.h
include/frontend/: PlatformWindow.h
include/frontend/vulkan/: QueueFamilyIndices.h  SwapchainSupportInfo.h  VulkanApplication.h  VulkanInitializer.h
include/vulkan/core/: CommandPool.h  Context.h  Device.h  InFlightFrames.h  Instance.h  PhysicalDevice.h  SharedContext.h  Surface.h  Swapchain.h
include/vulkan/debug/: DebugMessenger.h  ErrorCheck.h
include/vulkan/memory/: Texture.h
include/vulkan/pipeline/: RasterizationPipeline.h
include/vulkan/shader/: ShaderModule.h
include/vulkan/utils/: DebugMessenger.h  ErrorCheck.h  VkInitializer.h
include/windowing/: BaseWindow.h  ImGuiWindow.h  VulkanWindow.h  WindowManager.h
internal/vrc/: CMakeLists.txt  README.md
internal/vrc/include/: vrc.h
internal/vrc/src/: vrc.cpp
src/: main.cpp
src/core/camera/: PinholeCamera.cpp
src/core/render/: Raytracer.cpp
src/core/shape/: Sphere.cpp
src/example/: ImGuiExampleWindow.cpp  RaytracingExampleWindow.cpp
src/examples/: example_imgui.cpp  example_opengl.cpp  example_raytracing.cpp
src/frontend/: PlatformWindow.cpp
src/frontend/shaders/: rt.comp
src/frontend/vulkan/: QueueFamilyIndices.cpp  SwapchainSupportInfo.cpp  VulkanApplication.cpp
src/vulkan/core/: CommandPool.cpp  Context.cpp  Device.cpp  InFlightFrames.cpp  Instance.cpp  PhysicalDevice.cpp  SharedContext.cpp  Surface.cpp  Swapchain.cpp
src/vulkan/debug/: DebugMessenger.cpp  ErrorCheck.cpp
src/vulkan/memory/: Texture.cpp
src/vulkan/pipeline/: RasterizationPipeline.cpp
src/vulkan/shader/: ShaderModule.cpp
src/vulkan/utils/: DebugMessenger.cpp  ErrorCheck.cpp
src/windowing/: ImGuiWindow.cpp  VulkanWindow.cpp  WindowManager.cpp
